# conekta-bots

./: .dockerignore  .gitignore  README.md  adicionar_bot.py  adicionar_regra.py  app.py  database.db  database.py  deploy.sh  docker-compose.yml  manager.py  package-lock.json  requirements.txt  worker.py
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a2b3c4d5e6f7_add_shopee_support.py  f21c30f30def_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analytics.py  auth.py  bots.py  rules.py  schedules.py  settings.py
backend/app/core/: config.py  exception_handlers.py  exceptions.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  bot.py  configuracao.py  log.py  rule.py  schedule.py  user.py
backend/app/schemas/: __init__.py  bot.py  configuracao.py  log.py  rule.py  schedule.py  user.py
backend/app/services/: __init__.py  auth_service.py  bot_service.py  configuracao_service.py  log_service.py  rule_service.py  schedule_service.py  shopee_service.py  telegram_service.py
backend/app/workers/: bot_worker.py  manager.py  scheduler_worker.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_endpoints.py  test_bot_endpoints.py  test_telegram_api.py
backend/tests/unit/: test_auth_service.py  test_bot_service.py  test_bot_worker.py  test_telegram_service.py
docs/: architecture_guide.md  refactoring_proposal.md  task.md.resolved
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/components/layout/: Header.tsx  Layout.tsx  PublicRoute.tsx  RequireAuth.tsx  Sidebar.tsx
frontend/src/components/ui/: select.tsx
frontend/src/hooks/: useBots.ts  useRules.ts  useSchedules.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Bots.tsx  Dashboard.tsx  Login.tsx  Logs.tsx  Register.tsx  Rules.tsx  Schedules.tsx  Settings.tsx
frontend/src/services/: auth.ts  botService.ts  ruleService.ts  scheduleService.ts  settingsService.ts
frontend/src/store/: authStore.ts
templates/: adicionar_bot.html  agendamentos.html  auth_step2.html  bot_table_row.html  fragmento_logs.html  index.html  regras.html
(+3 files in other folders)
